--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -21,7 +21,7 @@ body::-webkit-scrollbar {
   width: 0;
 
 }
-
+/* Nav Style  */
 .navbar{
   background-color: rgba(255,255,255,0.45);
 }
@@ -51,57 +51,9 @@ a.nav-link2{
 
  }
 
-.carousel-caption {
-  position:absolute;
-  z-index: 30;
-  text-align:center;
-  top:30%;
-  margin:auto; 
-  padding: auto;
-/*
-  -webkit-transform: translate(0, -50%);
-  -ms-transform: translate(0, -50%);
-  transform: translate(0, -50%);
-*/}
+ /* nav Styles End  */
 
-/*  */
-
-
-.carousel-image{
-  height:inherit;
-  width: auto;
-  opacity: 0.3;
-  margin: auto;
-  padding: auto;
-  object-fit: cover;
-}
-@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
-  .carousel-image{ 
-    height: 568px;
-  }
-  .carousel-caption {
-    position: absolute;
-    z-index: 30;
-    text-align: center;
-    top: 30%;
-    margin: auto;
-    padding: auto;
-    /*
-  -webkit-transform: translate(0, -50%);
-  -ms-transform: translate(0, -50%);
-  transform: translate(0, -50%);
-*/
-  }
-
-}
-.pos{
-  position: absolute;
-  margin: auto ;
-  padding: auto ;
-  z-index: 0 ;
-  right:46%;
-  bottom: 45%;
-}
+/* Picture Caption Hover Effect  */
 .container2 {
   position: relative;
   width: 50%;
@@ -118,7 +70,7 @@ a.nav-link2{
   bottom: 0;
   left: 0;
   right: 0;
-  background-color:#fff;
+  background-color: #fff;
   overflow: hidden;
   width: 100%;
   height: 0;
@@ -141,91 +93,43 @@ a.nav-link2{
   transform: translate(-50%, -50%);
   text-align: justify;
 }
-/* Portrait */
-@media only screen and (min-device-width: 320px) and (max-device-width: 768px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
-  .carousel-image {
-    height: 568px;
-  }
-  .carousel-caption {
-    position: absolute;
-    z-index: 30;
-    text-align: center;
-    top: 30%;
-    margin: auto;
-    padding: auto;
-    /*
-  -webkit-transform: translate(0, -50%);
-  -ms-transform: translate(0, -50%);
-  transform: translate(0, -50%);
-*/
-  }
-  .pos {
-    
-    right: 20px;
-    bottom: 2%;
-  }
+/* Picture Caption hover Effect end  */
+
+.carousel-inner {
+  width: 100%;
+  
+  
+}
+
+/* main page Carousel */
+.carousel-item img {
+  opacity: 0.2;
+  width: 100%;
+  height : 640px;
+  object-fit: cover;
+}
+
+/* carosel Caption for main page  */
+.carousel-caption {
+  position : absolute;
+  text-align: center;
+  top : 30%;
+  position:absolute;
+  z-index: 30px;
+ 
+}
+
+/* Position of Join us button and hover */
+.pos {
+  position: absolute;
+  z-index: 60px;
+  bottom : 0;
+  right: 0;
+  font-size: 25px;
 
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
-  .carousel-image {
-    height: 768px;
-  }
-
-  .carousel-caption {
-    position: absolute;
-    z-index: 30;
-    text-align: center;
-    top: 30%;
-    margin: auto;
-    padding: auto;
-    /*
-  -webkit-transform: translate(0, -50%);
-  -ms-transform: translate(0, -50%);
-  transform: translate(0, -50%);
-*/
-  }
-
-  .pos {
-
-    right: 45%;
-    bottom: 35%;
-  }
-
-}
-
-/* Landscape */
-@media only screen and (min-device-width: 320px) and (max-device-width: 768px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
-
-  .carousel-image {
-    height: 480px;
-  }
-    .pos {
-      
-      right: 20px;
-      bottom: 6px ;
+.pos:hover{
+    cursor: crosshair;
+    border: 1px solid #888;
     }
-}
-
-
-
-
-@media only screen and (min-device-width: 768px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
-
-  .carousel-image {
-    height: 1024px;
-  }
-
-  .pos {
-
-    right: 47%;
-    bottom: 45%;
-  }
-}
-.full_screen{
-  position:relative;
-  height: auto;
-  width:100%;
-  overflow:hidden;
-  margin-top: 200px;
-}
