preloader added but not working

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -131,3 +131,32 @@ a.nav-link2{
 .pos:hover{
      border: 1px solid #888;
     }
+
+
+    /* preloader effect */
+.preloader {
+  align-items: center;
+  background: #fff;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  left: 0;
+  position: fixed;
+  top: 0;
+  transition: opacity 0.3s linear;
+  width: 100%;
+  z-index: 9999;
+  opacity: 1;
+  transform: opacity 1s linear;
+
+
+}
+ .filter-green {
+   filter: invert(48%) sepia(79%) saturate(2476%) hue-rotate(86deg) brightness(118%) contrast(119%);
+ }
+.preloader.loaded {
+  opacity: 0;
+  display: none;
+}
+
+    /* preloader  */
