preloader color updated but it may not be seen as due to less content

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -152,7 +152,8 @@ a.nav-link2{
 
 }
  .filter-green {
-   filter: invert(48%) sepia(79%) saturate(2476%) hue-rotate(86deg) brightness(118%) contrast(119%);
+   fill: red;
+  
  }
 .preloader.loaded {
  
